# queen-mary-beat-detector

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  PLAN.md  README.md  qm_bpm.h
include/: qm_bpm.h
lib/kissfft/: kiss_fft.c  kiss_fft.h  kiss_fftr.c  kiss_fftr.h
lib/qm-dsp/dsp/transforms/: FFT.cpp  FFT.h
src/: analyze_audio.cpp  beatutils_standalone.cpp  beatutils_standalone.h  qm_bpm.cpp  test_bpm.cpp
tests/: test_default_bpm.py
